--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+
+#ignore thumbnails created by windows
 Thumbs.db
+#Ignore files build by Visual Studio
+obj
+bin
+*.wbk
 *.obj
 *.exe
 *.pdb
@@ -10,7 +16,6 @@ Thumbs.db
 *_p.c
 *.ncb
 *.suo
-*.sln.docstates
 *.tlb
 *.tlh
 *.bak
@@ -21,9 +26,6 @@ Thumbs.db
 [Dd]ebug*/
 *.lib
 *.sbr
-obj/
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
-*.vssscc
-$tf*/
