--- a/Backup.csproj
+++ b/Backup.csproj
@@ -26,10 +26,14 @@
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OldToolsVersion>2.0</OldToolsVersion>
@@ -159,7 +163,7 @@
     <Compile Include="Favorites.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Form.cs">
+    <Compile Include="MainDlg.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormFmEditor.cs">
@@ -181,8 +185,8 @@
       <SubType>Designer</SubType>
       <DependentUpon>FavDescriptionEditor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form.resx">
-      <DependentUpon>Form.cs</DependentUpon>
+    <EmbeddedResource Include="MainDlg.resx">
+      <DependentUpon>MainDlg.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FormFmEditor.resx">
@@ -224,8 +228,8 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\shared\Shared.csproj">
-      <Project>{3C1472AA-BD69-40E3-B226-0B172275FAB5}</Project>
+    <ProjectReference Include="..\Common\shared\Shared.csproj">
+      <Project>{3c1472aa-bd69-40e3-b226-0b172275fab5}</Project>
       <Name>Shared</Name>
     </ProjectReference>
   </ItemGroup>
