BU Release: 1.38 RC7

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,11 @@ bin
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
+#Ignore thumbnails created by Windows
+#Ignore files built by Visual Studio
+obj/
+.vs/
+#Nuget packages folder
+packages/
+*.dll
+*.exe
