--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 #ignore thumbnails created by windows
 Thumbs.db
 #Ignore files build by Visual Studio
@@ -37,3 +36,4 @@ obj/
 packages/
 *.dll
 .idea/
+storage.ide*
